@@ -56,6 +56,7 @@ Template for new versions:
 
 ## New Features
 - `cleanowned`: Add a "nodump" option to allow for confiscating items without dumping
+- `tweak`: Add "flask-contents", makes flasks/vials/waterskins be named according to their contents
 
 ## Fixes
 
